--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dot-env": "0.0.1"
+    "dot-env": "0.0.1",
+    "dotenv": "^6.0.0"
   }
 }
