--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^11.4.0"
+    "discord.js": "^11.4.0",
+    "dotenv": "^6.0.0"
   }
 }
