test with twitch

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^11.4.0",
-    "dotenv": "^6.0.0"
+    "dotenv": "^6.0.0",
+    "twitch-api-v5": "^2.0.4"
   }
 }
