--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "discord.io": "^2.5.3",
     "discord.js": "^11.4.0",
+    "dotenv": "^6.0.0",
     "twitch-api-v5": "^2.0.4",
     "winston": "^3.0.0"
   }
